# arg-monitoring

./: .gitignore  README.md  atom.xml  bootstrap.js  cache.json  evil.json  evil.txt  index.html  index_js.bootstrap.js  neuro.json  neuro.txt  soundcloudfeed.xml  youtubefeed.xml
.github/: dependabot.yml
.github/workflows/: generate-feed.yml  twitch-stream-trigger.yml  update-static-website.yml
audio-monitoring/: Cargo.toml
audio-monitoring/src/: main.rs
feed-generator/: pyproject.toml
feed-generator/src/: arg_state.py  main.py  utils.py
feed-generator/src/metadata/: feeds.py  soundcloud_metadata.py  youtube_metadata.py  ytc_metadata.py
feed-generator/src/sources/: youtube_source.py
feed-generator/src/sources/twitch_source/: __init__.py  analyze.py  audio_threshold_parser.py  correct_npz.py  evil.npz  evil_training_clips.txt  frameviewer.py  hook_listener.py  monitoring.sh  neuro.npz  neuro_training_clips.txt  scrutinize.py  source.py  utils.py  vedal987_scrutinize.py  view_npz.py
src/: arg_state.py  main.py
src/metadata/: soundcloud_metadata.py  youtube_metadata.py
web/: Cargo.toml  README.md
web/src/: lib.rs  utils.rs
web/src/fetcher/: mod.rs
web/src/states/: mod.rs
web/www/: index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
