[package]
name = "audio-monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"
pleep = { git = "https://github.com/owobred/pleep.git", sha = "3aabd5a" }
pleep-build = { git = "https://github.com/owobred/pleep.git", sha = "3aabd5a" }
pleep-search = { git = "https://github.com/owobred/pleep.git", sha = "3aabd5a" }
pleep-audio = { git = "https://github.com/owobred/pleep.git", sha = "3aabd5a" }
symphonia = "0.5.4"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
