[tool.poetry]
name = "arg-monitoring"
version = "0.69.420"
description = "Monitors the ARG and stuff"
authors = ["clueless author <clueless@clueless.org>"]
readme = "../README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
dataclasses-json = "^0.6.7"
beautifulsoup4 = "^4.12.3"
feedgen = "^1.0.0"
yt-dlp = "^2025.2.19"
pillow = "^11.1.0"
numpy = "^2.2.2"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.0"
matplotlib = "^3.9.2"
twitchapi = "^4.3.1"
pygithub = "^2.5.0"
streamlink = "^7.1.2"
psutil = "^6.1.1"

[tool.poetry.dev-dependencies]
types-pillow = "*"
types-requests = "*"
pylint = "*"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
